@@ -1,3 +1,7 @@
+Fri Sep 10 10:34:14 1993  Kevin Layer  (layer@sole)
+
+	* fi-lemacs.el: missed fixing one of the menus
+
 *******************************************************************************
 2.0.8 public release
 *******************************************************************************
